fix: adding to demo-sessions zoom link
